force-app/main/default/objects/Price_Config__mdt/Price_Config__mdt.object-meta.xml
<CustomObject>
    <label>Price Config</label>
    <pluralLabel>Price Configs</pluralLabel>
</CustomObject>