force-app/main/default/objects/Price_Config__mdt/fields/Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Discount_Rate__c</fullName>
    <label>Discount Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>