force-app/main/default/objects/Price_Config__mdt/fields/Effective_Util__c.field-meta.xml
<CustomField>
    <fullName>Effective_Util__c</fullName>
    <label>Effective Util</label>
    <type>DateTime</type>
</CustomField>